feat: get endpoint changed to query by name
