# packages/api/documentation/swagger/apis.json
@@ -51,17 +51,17 @@
       }
     }
   },
-  "/apis/find/{id}": {
+  "/apis/find/{name}": {
     "get": {
       "summary": "Find a Web3API",
       "produces": ["application/json"],
       "parameters": [
         {
           "in": "path",
-          "name": "id",
+          "name": "name",
           "type": "string",
-          "description": "The Web3API ID",
-          "example": 1,
+          "description": "The Web3API name pattern",
+          "example": "uni",
           "required": true
         }
       ],
@@ -84,15 +84,17 @@
                 },
                 "example": {
                   "status": 200,
-                  "api": {
-                    "id": "3",
-                    "description": "DEX",
-                    "name": "Uniswap",
-                    "subtext": "Cool DEX",
-                    "icon": "uniswap.icon",
-                    "pointerUris": ["uniswap.api.eth"],
-                    "locationUri": "ipfs://QmUvHu18pVVJu5WqWbB2YJxb7LkL4YeKpzwYhuetWqD3pj"
-                  }
+                  "apis": [
+                    {
+                      "id": "3",
+                      "description": "DEX",
+                      "name": "Uniswap",
+                      "subtext": "Cool DEX",
+                      "icon": "uniswap.icon",
+                      "pointerUris": ["uniswap.api.eth"],
+                      "locationUri": "ipfs://QmUvHu18pVVJu5WqWbB2YJxb7LkL4YeKpzwYhuetWqD3pj"
+                    }
+                  ]
                 }
               }
             }
